--- a/lab4/makefile
+++ b/lab4/makefile
@@ -1,15 +1,13 @@
-# Makefile for lab4
-
 COMPILER_TYPE= gnu
 
-CC= gcc
+CC=gcc
 
-PROG= lab4
-SRCS= lab4.c mouse.c test4.c timer.c
+PROG=	lab4
+SRCS=	lab4.c test4.c kbc.c mouse.c timer.c
 
 CCFLAGS= -Wall
 
-DPADD+= ${LIBDRIVER} ${LIBSYS}
+DPADD+=	${LIBDRIVER} ${LIBSYS}
 LDADD+= -ldriver -lsys
 
 LDFLAGS+= -L .
@@ -18,3 +16,4 @@ MAN=
 
 .include <bsd.prog.mk>
 .include <bsd.gcc.mk>
+
