--- a/lab5/Makefile
+++ b/lab5/Makefile
@@ -1,7 +1,7 @@
 COMPILER_TYPE= gnu
 CC=gcc
 PROG= lab5
-SRCS= lab5.c vbe.c video_gr.c
+SRCS= lab5.c vbe.c video_gr.c test5.c pixmap.c timer.c
 CCFLAGS= -Wall
 DPADD+= ${LIBDRIVER} ${LIBSYS}
 LDADD+= -llm -ldriver -lsys
