matrix inicial state
git-svn-id: https://svn.fe.up.pt/repos/lcom1617-t1g01@63 f31db1e1-f3fa-489d-a1ec-45c04e6df4f4

--- a/ChessProject/src/Makefile
+++ b/ChessProject/src/Makefile
@@ -4,7 +4,7 @@ CC = gcc
 
 PROG = ChessProject
 SRCS = ChessProject.c
-SRCS += vbe.c video_gr.c utilities.c timer.c bitmap.c mouse.c kbd.c game.c
+SRCS += vbe.c video_gr.c utilities.c timer.c bitmap.c mouse.c kbd.c game.c chess.c
 
 CCFLAGS= -Wall -O3
 
