starting args read; structural changes

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 CC=gcc
 CFLAGS=-I.
-DEPS = defs.h
+DEPS = args.h
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-sfind: main.o parser.o 
-	gcc -o sfind main.o parser.o -I.
+sfind: main.o parser.o args.o
+	gcc -o sfind main.o parser.o args.o -I.
