--- a/sauna/src/makefile
+++ b/sauna/src/makefile
@@ -1,3 +1,3 @@
 all: gerador.c sauna.c
-	gcc -Wall -pthread -o gerador gerador.c
-	gcc -Wall -pthread -o sauna sauna.c
+	gcc -Wall -pthread -lm -o gerador gerador.c
+	gcc -Wall -pthread -lm -o sauna sauna.c
