Kryonet compiled; Choose Slime Color Implemented; Refactor

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ project(":desktop") {
 
     dependencies {
         compile project(":core")
+        compile "com.esotericsoftware:kryonet:2.22.0-RC1"
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
