--- a/core/build.gradle
+++ b/core/build.gradle
@@ -12,4 +12,5 @@ eclipse.project {
 
 dependencies {
     compile 'junit:junit:4.12'
+    compile 'com.badlogicgames.gdx:gdx-backend-headless:1.9.6'
 }
