--- a/core/build.gradle
+++ b/core/build.gradle
@@ -13,4 +13,5 @@ eclipse.project {
 dependencies {
     compile 'junit:junit:4.12'
     compile 'com.badlogicgames.gdx:gdx-backend-headless:1.9.6'
+    compile 'org.mockito:mockito-core:2.2.7'
 }
