--- a/Project1/makefile
+++ b/Project1/makefile
@@ -1,2 +1,2 @@
-all: main.c appLayer.c dataLinkLayer.c
-	gcc -Wall main.c appLayer.c dataLinkLayer.c -o serialPortScript
+all: main.c appLayer.c dataLinkLayer.c utilities.c
+	gcc -Wall main.c appLayer.c dataLinkLayer.c utilities.c -o serialPortScript
