--- a/Project2/src/makefile
+++ b/Project2/src/makefile
@@ -1,2 +1,2 @@
-all: main.c utils.c
-		gcc -Wall main.c utils.c -lm -o download
+all: main.c utils.c url.c
+		gcc -Wall main.c utils.c url.c -lm -o ftp
