getIP; error handling

--- a/Project2/src/makefile
+++ b/Project2/src/makefile
@@ -1,2 +1,2 @@
-all: main.c utils.c url.c
-		gcc -Wall main.c utils.c url.c -lm -o ftp
+all: main.c utils.c url.c ftp.c
+		gcc -Wall main.c utils.c url.c ftp.c -lm -o download
