--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-.idea/
-*.iml
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
