fixed adding new files

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost:8000
 
 DB_CONNECTION=pgsql
-DB_HOST=localhost
+DB_HOST=postgres
 DB_PORT=5432
 DB_DATABASE=postgres
 DB_USERNAME=postgres
