auction delete working

--- a/.env
+++ b/.env
@@ -5,12 +5,13 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost:8000
 
+
 DB_CONNECTION=pgsql
-DB_HOST=dbm.fe.up.pt
+DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=lbaw1764
-DB_USERNAME=lbaw1764
-DB_PASSWORD=hg25ld62
+DB_DATABASE=postgres
+DB_USERNAME=postgres
+DB_PASSWORD=pg!fcp
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
