--- a/.env_production
+++ b/.env_production
@@ -7,6 +7,9 @@ APP_URL=http://lbaw-prod.fe.up.pt:80/demo/
 DB_CONNECTION=pgsql
 DB_HOST=dbm.fe.up.pt
 DB_PORT=5432
+DB_DATABASE=lbaw1764
+DB_USERNAME=lbaw1764
+DB_PASSWORD=hg25ld62
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
