implement cities ajax, improve populate.sql, config-file
does the things

--- a/.env_production
+++ b/.env_production
@@ -1,6 +1,6 @@
-APP_NAME=Thingy
+APP_NAME=BidBay
 APP_KEY=base64:xWdLc4KY3iJKHCupluHuu1nDwvprk4OAqnsc6RRrGsA=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://lbaw1764.lbaw-prod.fe.up.pt/
 
