--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "oyejorge/less.php": "~1.7.0.9"
+        "oyejorge/less.php": "~1.7.0.9",
+        "laravelcollective/html": "^5.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
