--- a/.env_production
+++ b/.env_production
@@ -17,3 +17,7 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
+MAIL_DRIVER=smtp
+MAIL_HOST=localhost
+MAIL_PORT=1025
+MAIL_ENCRYPTION=null
