--- a/.env_production
+++ b/.env_production
@@ -18,6 +18,8 @@ SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=localhost
-MAIL_PORT=1025
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=bidbaylbaw@gmail.com
+MAIL_PASSWORD=lbaw_g64_admin
+MAIL_ENCRYPTION=ssl
