--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "appstract/laravel-bootstrap-components": "^1.0",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^6.3",
+        "hbattat/verifyemail": "^1.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.2",
