--- a/.env
+++ b/.env
@@ -19,6 +19,7 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
+# Mailhog (doesn't verify real email)
 #MAIL_DRIVER=smtp
 #MAIL_HOST=localhost
 #MAIL_PORT=1025
