fix db port bug, switch back to mailhog

--- a/.env
+++ b/.env
@@ -20,15 +20,15 @@ SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
 # Mailhog (doesn't verify real email)
-#MAIL_DRIVER=smtp
-#MAIL_HOST=localhost
-#MAIL_PORT=1025
-#MAIL_ENCRYPTION=null
-
-
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.googlemail.com
-MAIL_PORT=465
-MAIL_USERNAME=bidbaylbaw@gmail.com
-MAIL_PASSWORD=lbaw_g64_admin
-MAIL_ENCRYPTION=ssl
+MAIL_HOST=localhost
+MAIL_PORT=1025
+MAIL_ENCRYPTION=null
+
+
+#MAIL_DRIVER=smtp
+#MAIL_HOST=smtp.googlemail.com
+#MAIL_PORT=465
+#MAIL_USERNAME=bidbaylbaw@gmail.com
+#MAIL_PASSWORD=lbaw_g64_admin
+#MAIL_ENCRYPTION=ssl
