--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ QUEUE_DRIVER=sync
 # Mailhog (doesn't verify real email)
 MAIL_DRIVER=smtp
 MAIL_HOST=localhost
-MAIL_PORT=1025
+MAIL_PORT=1025pollin
 MAIL_ENCRYPTION=null
 
 MAIL_USERNAME=bidbaylbaw@gmail.com
