--- a/.env
+++ b/.env
@@ -26,6 +26,7 @@ MAIL_PORT=1025pollin
 MAIL_ENCRYPTION=null
 
 MAIL_USERNAME=bidbaylbaw@gmail.com
+MAIL_NAME=Administration
 MAIL_PASSWORD=lbaw_g64_admin
 
 #MAIL_DRIVER=smtp
