--- a/.env
+++ b/.env
@@ -22,11 +22,11 @@ QUEUE_DRIVER=sync
 # Mailhog (doesn't verify real email)
 MAIL_DRIVER=smtp
 MAIL_HOST=localhost
-MAIL_PORT=1025pollin
+MAIL_PORT=1025
 MAIL_ENCRYPTION=null
 
 MAIL_USERNAME=bidbaylbaw@gmail.com
-MAIL_NAME=Administration
+MAIL_NAME=BidBay
 MAIL_PASSWORD=lbaw_g64_admin
 
 #MAIL_DRIVER=smtp
