--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
+    "jest": "^23.6.0",
     "jest-expo": "30.0.0"
   }
 }
