--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-animated-bar": "^0.2.0",
+    "react-native-progress": "^3.5.0",
     "react-navigation": "^2.16.0"
   },
   "devDependencies": {
