--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
+    "test": "node ./node_modules/jest/bin/jest.js --watchAll",
+    "lint": "./node_modules/.bin/eslint . --ext .jsx --ext .js",
+    "validate": "concurrently --kill-others \"npm run --silent lint\""
   },
   "jest": {
     "preset": "jest-expo"
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "concurrently": "^4.0.1",
     "eslint": "^5.6.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
@@ -29,7 +31,14 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.1.2",
     "jest": "^23.6.0",
     "jest-expo": "30.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run --silent validate",
+      "pre-push": "npm run --silent validate"
+    }
   }
 }
