Fix PropType problems and add navigation to start button

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
+    "android": "expo start --android --lan",
     "ios": "expo start --ios",
     "eject": "expo eject",
     "test": "node ./node_modules/jest/bin/jest.js --watchAll",
