--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run --silent validate",
-      "pre-push": "npm run --silent validate"
+      "pre-commit": "npm run --silent validate"
     }
   }
 }
