Change default permissions and package name for android build

--- a/app.json
+++ b/app.json
@@ -5,8 +5,8 @@
     "slug": "routine-manager",
     "privacy": "public",
     "sdkVersion": "30.0.0",
-    "platforms": ["ios", "android"],
-    "version": "1.0.0",
+    "platforms": ["android"],
+    "version": "0.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "splash": {
@@ -20,8 +20,9 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
+    "android": {
+      "package": "feup.ldso.routines",
+      "permissions": []
     }
   }
 }
