--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ node_modules/**/*
 .vscode
 app/package-lock.json
 server/server.iml
+app/.expo
+app/node_modules
+server/routine_manager/__pycache__/
+server/server/__pycache__/
