--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-animatable": "^1.3.0",
     "react-native-modal": "^6.5.0",
     "react-native-modalbox": "^1.6.0",
     "react-native-progress": "^3.5.0",
