--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^6.5.0",
     "react-native-progress": "^3.5.0",
     "react-native-snap-carousel": "^3.7.5",
