--- a/app/package.json
+++ b/app/package.json
@@ -17,13 +17,19 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^30.0.1",
+    "native-base": "^2.8.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-animatable": "^1.3.0",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal": "^6.5.0",
+    "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-modalbox": "^1.6.0",
     "react-native-progress": "^3.5.0",
     "react-native-snap-carousel": "^3.7.5",
+    "react-native-sound": "^0.10.9",
+    "react-native-wheel-picker": "^1.2.0",
     "react-navigation": "^2.16.0",
     "react-redux": "^5.1.0",
     "redux": "^4.0.1",
