--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 DATABASE_ENGINE=django.db.backends.mysql
 DATABASE_NAME=ldsog02_db
-DATABASE_USER=ldsog02_user
-DATABASE_PASSWORD=ldsog02_pass
+DATABASE_USER=root
+DATABASE_PASSWORD=my-secret-pw
 DATABASE_HOST=mysql-dev
 DATABASE_PORT=3306
