--- a/server/dev.env
+++ b/server/dev.env
@@ -1,6 +1,6 @@
 DATABASE_ENGINE=django.db.backends.mysql
 DATABASE_NAME=ldsog02_db
-DATABASE_USER=ldsog02_user
-DATABASE_PASSWORD=ldsog02_pass
+DATABASE_USER=root
+DATABASE_PASSWORD=my-secret-pw
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=3308
