--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,15 +5,13 @@ services:
     image: mysql:5.7.24
     environment:
       MYSQL_ROOT_PASSWORD: my-secret-pw
-      MYSQL_USER: ldsog02_user
-      MYSQL_PASSWORD: ldsog02_pass
       MYSQL_DATABASE: ldsog02_db
     ports:
       - "3308:3306"
 
   django:
     build: .
-    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: bash -c "python manage.py migrate && python manage.py test && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
