--- a/app/package.json
+++ b/app/package.json
@@ -7,16 +7,28 @@
     "android": "expo start --android --lan",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll",
+    "test": "node ./node_modules/jest/bin/jest.js",
     "lint": "./node_modules/.bin/eslint . --ext .jsx --ext .js",
     "validate": "concurrently --kill-others \"npm run --silent lint\""
   },
   "jest": {
+    "coverageReporters": [
+      "text"
+    ],
+    "reporters": [
+      "default",
+      "jest-junit"
+    ],
     "preset": "jest-expo"
+  },
+  "jest-junit": {
+    "output": "junit.xml",
+    "usePathForSuiteName": "true"
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^30.0.1",
+    "jest-junit": "^5.2.0",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
