--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,4 +26,12 @@ expo-prod-deployments:
   script:
     - apk add --no-cache bash
     - npx expo login -u ldsog02 -p jungle-setup
-    - npx expo publish --non-interactive
+    - npx expo publish --non-interactive --release-channel production
+expo-staging-deployments:
+  only:
+    - development
+  stage: deploy
+  script:
+    - apk add --no-cache bash
+    - npx expo login -u ldsog02 -p jungle-setup
+    - npx expo publish --non-interactive --release-channel staging
