--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,6 @@ stages:
   - deploy
 before_script:
   - cd app
-  - npm ci
   - npm install
   - npm install -g expo-cli
 jest-tests:
@@ -31,6 +30,7 @@ expo-prod-deployments:
 expo-staging-deployments:
   only:
     - development
+    - 66-fix-pipelines
   stage: deploy
   script:
     - apk add --no-cache bash
