--- a/app/package.json
+++ b/app/package.json
@@ -7,9 +7,10 @@
     "android": "expo start --android --lan",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll",
+    "test": "node ./node_modules/jest/bin/jest.js",
+    "coverage": "node ./node_modules/jest/bin/jest.js --coverage",
     "lint": "./node_modules/.bin/eslint . --ext .jsx --ext .js",
-    "validate": "concurrently --kill-others \"npm run --silent lint\""
+    "validate": "concurrently --kill-others \"npm run --silent lint\" \"npm run --silent test\""
   },
   "jest": {
     "preset": "jest-expo"
