--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "@expo/samples": "2.1.1",
     "expo": "^30.0.1",
     "jest-junit": "^5.2.0",
+    "native-base": "^2.8.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
