--- a/app/package.json
+++ b/app/package.json
@@ -7,19 +7,9 @@
     "android": "expo start --android --lan",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js",
+    "test": "node ./node_modules/jest/bin/jest.js --config jest.config.json --no-cache",
     "lint": "./node_modules/.bin/eslint . --ext .jsx --ext .js",
     "validate": "concurrently \"npm run --silent lint\" \"npm run --silent test\""
-  },
-  "jest": {
-    "coverageReporters": [
-      "text"
-    ],
-    "reporters": [
-      "default",
-      "jest-junit"
-    ],
-    "preset": "jest-expo"
   },
   "jest-junit": {
     "output": "junit.xml",
@@ -32,7 +22,6 @@
     "native-base": "^2.8.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
-    "react-dom": "^16.6.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-animatable": "^1.3.0",
     "react-native-material-dropdown": "^0.11.1",
@@ -65,7 +54,9 @@
     "husky": "^1.1.2",
     "jest": "^23.6.0",
     "jest-expo": "30.0.0",
-    "redux-mock-store": "^1.5.3"
+    "jest-serializer-enzyme": "^1.0.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.6.3"
   },
   "husky": {
     "hooks": {
