--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "eject": "expo eject",
     "coverage": "node ./node_modules/jest/bin/jest.js --coverage --config jest.config.json",
-    "test": "node ./node_modules/jest/bin/jest.js --config jest.config.json --no-cache",
+    "ci-test": "node ./node_modules/jest/bin/jest.js --config jest.config.json --no-cache --verbose",
+    "test": "node ./node_modules/jest/bin/jest.js --config jest.config.json --no-cache --collectCoverage=false",
     "lint": "./node_modules/.bin/eslint . --ext .jsx --ext .js",
     "validate": "concurrently \"npm run --silent lint\" \"npm run --silent test\""
   },
