--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ expo-prod-deployments:
   script:
     - apk add --no-cache bash
     - npx expo login -u ldsog02 -p jungle-setup
-    - npx expo publish --non-interactive --release-channel production
+    - npx expo build:android --release-channel production
 expo-staging-deployments:
   only:
     - development
@@ -34,4 +34,4 @@ expo-staging-deployments:
   script:
     - apk add --no-cache bash
     - npx expo login -u ldsog02 -p jungle-setup
-    - npx expo publish --non-interactive --release-channel staging
+    - npx expo build:android --release-channel staging
