--- a/website/package.json
+++ b/website/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "vee-validate": "^2.1.3",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
