--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ cache:
   key: ${CI_COMMIT_REF_SLUG}
   paths:
   - app/node_modules/
-  - .cache/pip
+  - server/.cache/pip
 stages:
   - test
   - deploy
@@ -46,6 +46,7 @@ expo-prod-deployments:
   only:
     - master
   stage: deploy
+  <<: *install_app_packages
   script:
     - apk add --no-cache bash
     - npx expo login -u ldsog02 -p jungle-setup
@@ -54,7 +55,9 @@ expo-prod-deployments:
 expo-staging-deployments:
   only:
     - development
+    - 65-setup-ci-cd
   stage: deploy
+  <<: *install_app_packages
   script:
     - apk add --no-cache bash
     - npx expo login -u ldsog02 -p jungle-setup
