Add new database configs

--- a/server/dev.env
+++ b/server/dev.env
@@ -1,6 +1,6 @@
 DATABASE_ENGINE=django.db.backends.mysql
-DATABASE_NAME=ldsog02_db
-DATABASE_USER=root
-DATABASE_PASSWORD=my-secret-pw
-DATABASE_HOST=127.0.0.1
-DATABASE_PORT=3308
+DATABASE_NAME=django_staging
+DATABASE_USER=ldsog02
+DATABASE_PASSWORD=cenas
+DATABASE_HOST=46.101.107.178
+DATABASE_PORT=3306
