--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,19 +7,18 @@ cache:
   key: ${CI_COMMIT_REF_SLUG}
   paths:
   - app/node_modules/
-  - server/ .cache/pip
+  - server/.cache/pip
+
 stages:
   - test
   - deploy
 
-.install-app-packages: &install_app_packages
+.install-app-dependencies: &install_app_dependencies
   image: node:alpine
   before_script:
     - npm install -g expo-cli 
-    - cd app
-    - npm ci
 
-.install-server-packages: &install_server_packages
+.install-server-dependencies: &install_server_dependencies
   image: python:3.7.1
   before_script: 
     - cd server
@@ -27,8 +26,10 @@ stages:
 
 jest-tests:
   stage: test
-  <<: *install_app_packages
+  <<: *install_app_dependencies
   script:
+    - cd app
+    - npm ci
     - npm run ci-test
     - npm run lint
   artifacts:
@@ -37,19 +38,19 @@ jest-tests:
 
 django-tests:
   stage: test
-  <<: *install_server_packages
+  <<: *install_server_dependencies
   script:
     - pip list
     - python manage.py test
   artifacts:
     reports:
-      junit: serve/tests_report.xml
+      junit: server/tests_report.xml
 
 expo-prod-deployments:
   only:
     - master
   stage: deploy
-  <<: *install_app_packages
+  <<: *install_app_dependencies
   script:
     - apk add --no-cache bash
     - npx expo login -u ldsog02 -p jungle-setup
@@ -59,7 +60,7 @@ expo-staging-deployments:
   only:
     - development
   stage: deploy
-  <<: *install_app_packages
+  <<: *install_app_dependencies
   script:
     - apk add --no-cache bash
     - npx expo login -u ldsog02 -p jungle-setup
