added module for font awesome icons

--- a/website/package.json
+++ b/website/package.json
@@ -7,6 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-regular-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/vue-fontawesome": "^0.1.2",
     "bootstrap-vue": "^2.0.0-rc.11",
     "v-toaster": "^1.0.3",
     "vee-validate": "^2.1.3",
