--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 DATABASE_ENGINE=django.db.backends.mysql
-DATABASE_NAME=django_staging
-DATABASE_USER=ldsog02
+DATABASE_NAME=ldsog02_db
+DATABASE_USER=root
 DATABASE_PASSWORD=cenas
-DATABASE_HOST=46.101.107.178
+DATABASE_HOST=mysql-db
 DATABASE_PORT=3306
