--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 DATABASE_ENGINE=django.db.backends.mysql
-DATABASE_NAME=ldsog02_db
+DATABASE_NAME=ldsog02_db_dev
 DATABASE_USER=root
 DATABASE_PASSWORD=cenas
-DATABASE_HOST=mysql-db
-DATABASE_PORT=3306
+DATABASE_HOST=167.99.128.178
+DATABASE_PORT=3308
