--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,9 +78,11 @@ django-staging-deployments:
     - 65-setup-ci-cd
   stage: deploy
   before_script:
+    - ls
+    - ls ..
     - apt-get update -qq && apt-get install -y -qq git
-    - cd server
-    - chmod +x deploy-django.sh
   script:
     - git clone -b ${CI_COMMIT_REF_NAME} https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/ldso18-19/t4g2
-    - ./deploy-django.sh
+  artifacts:
+      paths:
+      - t4g2/
