--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-action-button": "^2.8.5",
     "react-native-animatable": "^1.3.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^6.5.0",
