Implements tests to Register Screen covering 100% of it's statements, branches, functions and lines

--- a/app/jest.config.json
+++ b/app/jest.config.json
@@ -1,4 +1,7 @@
 {
+  "transformIgnorePatterns": [
+    "/node_modules/(?!native-base)/"
+  ],
   "collectCoverage": true,
   "collectCoverageFrom": [
       "**/*.js"
