--- a/Netrow/package.json
+++ b/Netrow/package.json
@@ -39,8 +39,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.17",
-    "bootstrap-vue": "^2.0.0-rc.11"
+    "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
     "root": true,
