--- a/Netrow/package.json
+++ b/Netrow/package.json
@@ -29,6 +29,7 @@
     "bulma": "^0.7.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2",
+    "vue-slider-component": "^2.8.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
