--- a/Netrow/package.json
+++ b/Netrow/package.json
@@ -27,19 +27,21 @@
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "bulma": "^0.7.2",
+    "query-string": "^6.2.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2",
     "vue-slider-component": "^2.8.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.1.6",
     "@fortawesome/fontawesome-free": "^5.5.0",
+    "@babel/preset-env": "^7.1.6",
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
+    "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
