--- a/Netrow/package.json
+++ b/Netrow/package.json
@@ -24,6 +24,8 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.5.0",
+    "@types/query-string": "^6.1.1",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "bulma": "^0.7.2",
@@ -34,11 +36,9 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.5.0",
-    "@babel/preset-env": "^7.1.6",
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "@vue/cli-plugin-babel": "^3.1.1",
+    "@vue/cli-plugin-typescript": "^3.1.1",
+    "@vue/cli-service": "^3.1.4",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "typescript": "^3.0.0",
