--- a/Netrow/package.json
+++ b/Netrow/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.5.0",
     "@types/query-string": "^6.1.1",
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "bulma": "^0.7.2",
