--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ expo-prod-deployments:
 expo-staging-deployments:
   only:
     - development
+    - fixpipelines
   stage: deploy
   script:
     - apk add --no-cache bash
