Update routine screen

--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@expo/vector-icons": "^8.0.0",
     "expo": "^30.0.1",
     "native-base": "^2.8.1",
     "prop-types": "^15.6.2",
