--- a/app/app.json
+++ b/app/app.json
@@ -14,6 +14,11 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "androidStatusBarColor": "#000000",
+    "androidStatusBar": {
+    "barStyle": "light-content",
+    "backgroundColor": "#000000"
+    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
