--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,4 +85,4 @@ django-staging-deployments:
     - mkdir -p ~/.ssh
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
   script:
-    - ssh -t ldsog02@167.99.128.178 "cd /home/ldsog02 && git clone -b ${CI_COMMIT_REF_NAME} https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/ldso18-19/t4g2 && ./t4g2/deploy_stage.sh ${SUDO}"
+    - ssh -t ldsog02@167.99.128.178 "cd /home/ldsog02 && git clone -b ${CI_COMMIT_REF_NAME} https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/ldso18-19/t4g2 && ./t4g2/deploy_stage.sh"
