--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   django:
     build: .
-    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: bash -c "sleep 60s && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
