--- a/server/docker-compose_dev.yml
+++ b/server/docker-compose_dev.yml
@@ -12,7 +12,7 @@ services:
 
   django-dev:
     build: .
-    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8080"
+    command: bash -c "sleep 60s python manage.py migrate && python manage.py runserver 0.0.0.0:8080"
     volumes:
       - .:/code
     ports:
