--- a/Netrow/package.json
+++ b/Netrow/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "production": "vue-cli-service build",
-    "development": "vue-cli-service build --mode development"
+    "development": "vue-cli-service build --mode development",
+    "serve": "serve -s dist"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,6 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.5.0",
     "@types/query-string": "^6.1.1",
-    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "bulma": "^0.7.2",
