--- a/Netrow/package.json
+++ b/Netrow/package.json
@@ -31,6 +31,8 @@
     "babel-runtime": "^6.26.0",
     "bulma": "^0.7.2",
     "query-string": "^6.2.0",
+    "v-toaster": "^1.0.3",
+    "vee-validate": "^2.1.3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2",
     "vue-slider-component": "^2.8.2",
