Update README.md and changelog.md

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ expo-prod-deployments:
     - npm install -g expo-cli 
     - apk add --no-cache bash
     - npx expo login -u ldsog02 -p jungle-setup
-    - npx expo build:android --release-channel production
+    - npx expo build:android
 
 expo-staging-deployments:
   only:
