--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-action-button": "^2.8.5",
     "react-native-animatable": "^1.3.0",
+    "react-native-confetti": "^0.1.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^6.5.0",
     "react-native-modal-datetime-picker": "^6.0.0",
