--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -2,7 +2,8 @@
   "parser": "babel-eslint",
   "extends": ["standard", "standard-react"],
   "globals": {
-    "__DEV__": false
+    "__DEV__": false,
+    "fetch": false
   },
   "env": {
     "jest": true
