--- a/app/jest.config.json
+++ b/app/jest.config.json
@@ -31,5 +31,5 @@
   "snapshotSerializers": [
     "enzyme-to-json/serializer"
   ],
-  "testPathIgnorePatterns": ["assets/images", "node_modules", "__tests__/mockTestData"]
+  "testPathIgnorePatterns": ["assets/images", "node_modules", "constants/mockTestData"]
 }
