--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,8 @@ stages:
 
 jest-tests:
   stage: test
+  except:
+    - 5-create-a-new-child-profile-db
   <<: *install_app_dependencies
   script:
     - npm run ci-test
@@ -46,6 +48,8 @@ jest-tests:
 
 django-tests:
   stage: test
+  except:
+    - 5-create-a-new-child-profile-db
   <<: *install_server_dependencies
   script:
     - pip list
