Start handling of uploaded images

--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -3,7 +3,8 @@
   "extends": ["standard", "standard-react"],
   "globals": {
     "__DEV__": false,
-    "fetch": false
+    "fetch": false,
+    "FormData": false
   },
   "env": {
     "jest": true
