Add splash screen and icon

--- a/app/app.json
+++ b/app/app.json
@@ -14,7 +14,7 @@
     },
     "splash": {
       "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "androidStatusBarColor": "#000000",
