--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
     "eject": "expo eject",
     "coverage": "node ./node_modules/jest/bin/jest.js --coverage --config jest.config.json",
     "ci-test": "node ./node_modules/jest/bin/jest.js --config jest.config.json --no-cache --verbose",
-    "test": "node ./node_modules/jest/bin/jest.js --config jest.config.json --collectCoverage=false",
+    "test": "node ./node_modules/jest/bin/jest.js --config jest.config.json --collectCoverage=false --silent",
     "lint": "./node_modules/.bin/eslint . --ext .jsx --ext .js",
     "validate": "concurrently \"npm run --silent lint\" \"npm run --silent test\""
   },
