--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android --lan",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "coverage": "node ./node_modules/jest/bin/jest.js --coverage --config jest.config.json",
+    "coverage": "node ./node_modules/jest/bin/jest.js --coverage --config jest.config.json --silent",
     "ci-test": "node ./node_modules/jest/bin/jest.js --config jest.config.json --no-cache --verbose",
     "test": "node ./node_modules/jest/bin/jest.js --config jest.config.json --collectCoverage=false --silent",
     "lint": "./node_modules/.bin/eslint . --ext .jsx --ext .js",
