Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,17 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+Polymer Reef/Assets/FMODStudioCache.asset
+Polymer Reef/Assets/FMODStudioCache.asset.meta
+Polymer Reeffmod.log
+Polymer Reeffmod_editor.log
+Polymer Reef/Assets/FMODStudioCache.asset
+Polymer Reef/Assets/FMOD/axel_game_sound/Build/*
+Polymer Reef/Assets/FMOD/axel_game_sound/*.cache
+Polymer Reef/Assets/FMOD/axel_game_sound/*.restore
+Polymer Reef/Assets/FMOD/axel_game_sound/*.user
+
+
+
+Polymer Reef/Assets/FMOD/axel_game_sound/*.
