--- a/.gitignore
+++ b/.gitignore
@@ -52,13 +52,14 @@ crashlytics-build.properties
 
 Polymer Reef/Assets/FMODStudioCache.asset
 Polymer Reef/Assets/FMODStudioCache.asset.meta
-Polymer Reeffmod.log
-Polymer Reeffmod_editor.log
+Polymer Reef/fmod.log
+Polymer Reef/fmod_editor.log
 Polymer Reef/Assets/FMODStudioCache.asset
 Polymer Reef/Assets/FMOD/axel_game_sound/Build/*
 Polymer Reef/Assets/FMOD/axel_game_sound/*.cache
 Polymer Reef/Assets/FMOD/axel_game_sound/*.restore
 Polymer Reef/Assets/FMOD/axel_game_sound/*.user
+Polymer Reef/Assets/Plugins/x86_64/fmodstudiol.dll
 
 
 
