--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,28 @@
 atomicwrites==1.3.0
 attrs==19.3.0
 beautifulsoup4==4.8.1
+blis==0.4.1
+boto==2.49.0
+boto3==1.10.45
+botocore==1.13.45
+catalogue==0.2.0
 certifi==2019.9.11
 chardet==3.0.4
 cycler==0.10.0
+cymem==2.0.3
+docutils==0.15.2
+en-core-web-sm==2.2.5
 fake-useragent==0.1.11
 funcy==1.13
 future==0.18.2
+gensim==3.8.1
 google-search==1.0.2
 Google-Search-API==1.1.14
 google-search-results==1.7.1
 idna==2.8
 importlib-metadata==0.23
 Jinja2==2.10.3
+jmespath==0.9.4
 joblib==0.14.0
 kiwisolver==1.1.0
 lxml==4.4.1
@@ -20,6 +30,7 @@ MarkupSafe==1.1.1
 matplotlib==3.1.1
 more-itertools==7.2.0
 multidict==4.7.1
+murmurhash==1.0.2
 -e git+https://github.com/afonsobspinto/nlppreprocess.git
 nltk==3.4.5
 numexpr==2.7.0
@@ -28,7 +39,9 @@ oauthlib==3.1.0
 packaging==19.2
 pandas==0.25.3
 Pillow==6.2.1
+plac==1.1.3
 pluggy==0.13.0
+preshed==3.0.2
 py==1.8.0
 pyLDAvis==2.1.2
 pyparsing==2.4.5
@@ -40,17 +53,24 @@ pytz==2019.3
 PyYAML==5.2
 requests==2.22.0
 requests-oauthlib==1.3.0
+s3transfer==0.2.1
 scikit-learn==0.21.3
 scipy==1.3.2
 seaborn==0.9.0
 selenium==2.53.6
 six==1.13.0
 sklearn==0.0
+smart-open==1.9.0
 soupsieve==1.9.5
+spacy==2.2.3
+srsly==0.2.0
+thinc==7.3.1
+tqdm==4.41.0
 tweepy==3.8.0
 Unidecode==1.1.1
 urllib3==1.25.6
 vcrpy==3.0.0
+wasabi==0.4.2
 wcwidth==0.1.7
 wordcloud==1.5.0
 wrapt==1.11.2
