--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ matplotlib==3.1.1
 more-itertools==7.2.0
 multidict==4.7.1
 murmurhash==1.0.2
--e git+https://github.com/afonsobspinto/nlppreprocess.git
+-e git+https://github.com/afonsobspinto/nlppreprocess.git#egg=nlppreprocess
 nltk==3.4.5
 numexpr==2.7.0
 numpy==1.17.3
