--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ docutils==0.15.2
 fake-useragent==0.1.11
 funcy==1.13
 future==0.18.2
+gcsfs==0.6.0
 gensim==3.8.1
 google-search==1.0.2
 Google-Search-API==1.1.14
