--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 .idea
-src/__pycache__/
-src/data_manipulation/data_cleaning/__pycache__/
-src/data_extraction/__pycache__/
 *.env
-data/*
-src/data_manipulation/__pycache__/
-src/topic_modeling/__pycache__/
+data/**/*.csv
+src/**/__pycache__/
